<resources>
    <string name="app_name">dianjiao</string>
    <string name="IEEMP_c">智能电教管理平台</string>
    <string name="IEEMP_e">INTELLIGENT ELECTRIFIED EDUCATION MANAGEMENT PLATFORM</string>
    <string name="keep_login">保持登陆</string>
    <string name="login">登&#160;&#160;&#160;&#160;陆</string>
    <string name="technical_support_c">&#160;技术支持：南京冠霆科技</string>
    <string name="technical_support_e">&#160;&#064;COPYRIGHT&#160;BY&#160;NANJING&#160;GUANTING&#160;TECHNOLOGY&#160;CO.,LTD</string>
    <string name="home_page">首页</string>
    <string name="bofangkongzhi">播放控制</string>
    <string name="tuwenbobao">图文播报</string>
    <string name="meitiziyuan">媒体资源</string>
    <string name="jihuaguanli">计划管理</string>
    <string name="xitongpeizhi">系统配置</string>
    <string name="selected_jianshi">已选监室：</string>
    <string name="del_select">取消选择</string>
    <string name="select_all">全部选择</string>
    <string name="jianshi_type_03">监室类型03</string>
    <string name="jianshi_type_02">监室类型02</string>
    <string name="jianshi_type_01">监室类型01</string>
    <string name="search_file">搜索文件</string>
    <string name="browse">浏览</string>
    <string name="checked_picture">已选图片：</string>
    <string name="sure_send">确认发送</string>
    <string name="checked_media">已选电影：</string>
    <string name="media_name">片名：</string>
    <string name="media_country">国家：</string>
    <string name="media_type">类型：</string>
    <string name="media_tume">时长：</string>
    <string name="task_info">任务详情</string>
    <string name="add">新增</string>
    <string name="space_add">添&#160;&#160;加</string>
    <string name="delete">删除</string>
    <string name="space_delete">删&#160;&#160;除</string>
    <string name="delete_change">取消修改</string>
    <string name="sub_change">提交修改</string>
    <string name="task_name">任务名称</string>
    <string name="start_time">开始时间</string>
    <string name="over_time">结束时间</string>
    <string name="round">循环</string>
    <string name="execute_action">执行动作</string>
    <string name="file">文件</string>
    <string name="remark">备注说明</string>
    <string name="round_one">一</string>
    <string name="round_two">二</string>
    <string name="round_three">三</string>
    <string name="round_four">四</string>
    <string name="round_five">五</string>
    <string name="round_six">六</string>
    <string name="round_seven">日</string>
    <string name="time_sync">时间同步</string>
    <string name="server_address">服务器地址</string>
    <string name="stream_media_address">流媒体地址</string>
    <string name="restart_time">定时重启时间</string>
    <string name="remote_update">远程升级</string>
    <string name="online_monitor">在线监测</string>
    <string name="import_export">导入导出</string>
    <string name="product_info">产品信息</string>
    <string name="auto_sync">自动同步</string>
    <string name="hand_move_sync">手动同步</string>
    <string name="lock_sync">定时同步</string>
    <string name="time_sync_tv">请选择同步方式。上次同步时间：</string>
    <string name="add_address">添加地址</string>
    <string name="delete_address">删除地址</string>
    <string name="selected_item">已选项目：</string>
    <string name="auto_update">自动升级</string>
    <string name="hand_move_update">手动升级</string>
    <string name="never_update">不再升级</string>
    <string name="system_version">当前系统版本号：</string>
    <string name="have_new_version">系统有更新版本，请选择升级</string>
    <string name="no_new_version">已经是最新版本</string>
    <string name="id_num">编号</string>
    <string name="product_name">设备名</string>
    <string name="state">状态</string>
    <string name="file_import">文件导入</string>
    <string name="file_import_address">文件导入路径</string>
    <string name="sure_import">确认导入</string>
    <string name="file_export">文件导出</string>
    <string name="choose_export_file">选择要导出文件</string>
    <string name="file_export_address">文件导出路径</string>
    <string name="sure_export">确认导出</string>

    <string name="product_model">产品型号</string>
    <string name="product_model_body">A0001</string>
    <string name="CPU">处理器</string>
    <string name="CPU_body">海思四核</string>
    <string name="RAM">内存</string>
    <string name="RAM_body">内存2GB&#160;DDR3，内存占用1.2G</string>
    <string name="flash_ROM">闪存</string>
    <string name="flash_ROM_body">闪存8GB&#160;FLASH，已用空间2.4G</string>
    <string name="file_sysem">文件系统</string>
    <string name="file_system_body">文件系统&#160;&#160;FAT32/NTFS/EXT3</string>
    <string name="system_ver">系统版本</string>
    <string name="system_ver_body">Ver 20160522.1</string>
    <string name="output_dpi">输出分辨率</string>
    <string name="output_dpi_body">1280×800</string>
    <string name="wlan_intface">网路接口</string>
    <string name="wlan_intface_body">有线网络：10/100M&#160;自适应网络接口</string>
    <string name="DC">电源电压</string>
    <string name="DC_body">输入：AC100-240V，50/60Hz&#160;&#160;输出：DC/5V&#160;2A</string>
    <string name="product_size">产品尺寸</string>
    <string name="product_size_body">158.8*104.7*23.6mm</string>
    <string name="service_tel">客服电话</string>
    <string name="service_tel_body">400-123-456</string>
    <string name="server_save">保存</string>
    <string name="play_control_dialog">请先选择好监室，再选定播放模式</string>
</resources>
