<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ss_product_info_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">
    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/product_model"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@android:color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical|left"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/product_model_body"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/CPU"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@android:color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical|left"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/CPU_body"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/RAM"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@android:color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical|left"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/RAM_body"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/flash_ROM"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@android:color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical|left"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/flash_ROM_body"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/file_sysem"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@android:color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical|left"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/file_system_body"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/system_ver"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@android:color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical|left"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/system_ver_body"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/output_dpi"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@android:color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical|left"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/output_dpi_body"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/wlan_intface"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@android:color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical|left"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/wlan_intface_body"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/DC"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@android:color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical|left"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/DC_body"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/product_size"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@android:color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical|left"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/product_size_body"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/service_tel"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@android:color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical|left"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/service_tel_body"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>