<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/ss_online_monitor_lv_item_id_tv"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:background="@color/online_monitor_lv_td_bg"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:text="@string/id_num"/>
    <TextView
        android:id="@+id/ss_online_monitor_lv_item_product_name_tv"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="2dp"
        android:layout_weight="1.5"
        android:background="@color/online_monitor_lv_td_bg"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:text="@string/product_name"/>
    <TextView
        android:id="@+id/ss_online_monitor_lv_item_state_tv"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="2dp"
        android:background="@color/online_monitor_lv_td_bg"
        android:layout_weight="3"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:text="@string/state"/>
</LinearLayout>