<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ss_remote_update_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">
    <RadioGroup
        android:id="@+id/ss_remote_update_rg"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="600dp"
        android:layout_height="200dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/ss_remote_update_auto_rb"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:button="@null"
            android:background="@drawable/radio_ss_auto"
            android:gravity="bottom"
            android:paddingLeft="45dp"
            android:paddingBottom="28dp"
            android:text="@string/auto_update"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
        <RadioButton
            android:id="@+id/ss_remote_update_hand_move_rb"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:button="@null"
            android:background="@drawable/radio_ss_hand_move"
            android:gravity="bottom"
            android:paddingLeft="45dp"
            android:paddingBottom="28dp"
            android:text="@string/hand_move_update"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
        <RadioButton
            android:id="@+id/ss_remote_update_never_rb"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:button="@null"
            android:background="@drawable/radio_ss_never"
            android:gravity="bottom"
            android:paddingLeft="45dp"
            android:paddingBottom="28dp"
            android:text="@string/never_update"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
    </RadioGroup>
    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
        <TextView
            android:id="@+id/ss_remote_update_version_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_version"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/ss_remote_update_version_tv"
            android:layout_toRightOf="@id/ss_remote_update_version_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ver 20160522.1beta"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/ss_remote_update_update_tv"
            android:layout_toRightOf="@id/ss_remote_update_version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/have_new_version"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
</RelativeLayout>