<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ss_time_sync_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">
    <RadioGroup
        android:id="@+id/ss_time_sync_rg"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="600dp"
        android:layout_height="200dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/ss_time_sync_auto_rb"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:button="@null"
            android:background="@drawable/radio_ss_auto"
            android:gravity="bottom"
            android:paddingLeft="45dp"
            android:paddingBottom="28dp"
            android:text="@string/auto_sync"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
        <RadioButton
            android:id="@+id/ss_time_sync_hand_move_rb"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:button="@null"
            android:background="@drawable/radio_ss_hand_move"
            android:gravity="bottom"
            android:paddingLeft="45dp"
            android:paddingBottom="28dp"
            android:text="@string/hand_move_sync"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
        <RadioButton
            android:id="@+id/ss_time_sync_lock_rb"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:button="@null"
            android:background="@drawable/radio_ss_lock"
            android:gravity="bottom"
            android:paddingLeft="45dp"
            android:paddingBottom="28dp"
            android:text="@string/lock_sync"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
    </RadioGroup>
    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
        <TextView
            android:id="@+id/ss_time_sync_time_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_sync_tv"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/ss_time_sync_time_tv"
            android:layout_toRightOf="@id/ss_time_sync_time_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2016年12月24日13：30：00"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
</RelativeLayout>