<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ss_server_address_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bluestroke_gray_bg"
    android:visibility="gone">
    <RadioGroup
        android:id="@+id/ss_server_address_rg"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@drawable/shape_topcorner_gray_bg">
        <RadioButton
            android:id="@+id/ss_server_address_server_rb"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:button="@null"
            android:background="@drawable/radio_jianqu"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/server_address"
            android:textSize="18sp"
            android:textColor="@color/selector_blue_white"/>
        <RadioButton
            android:id="@+id/ss_server_address_stream_media_rb"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:button="@null"
            android:background="@drawable/radio_jianqu"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/stream_media_address"
            android:textSize="18sp"
            android:textColor="@color/selector_blue_white" />
    </RadioGroup>

    <GridView
        android:id="@+id/ss_server_address_gv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="80dp"
        android:padding="30dp"
        android:scrollbars="none"
        android:numColumns="1"
        android:verticalSpacing="10dp">

    </GridView>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_top_blue_stroke">
        <!--<TextView
            android:id="@+id/ss_server_address_selected_item"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/selected_item"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/ss_server_address_selected_item_tv"
            android:layout_toRightOf="@id/ss_server_address_selected_item"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>-->
        <Button
            android:id="@+id/ss_server_address_save_btn"
            android:background="@drawable/shape_blue_smallcorner_bg"
            android:textColor="@android:color/white"
            android:text="@string/server_save"
            android:layout_marginLeft="30dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/ss_server_address_delete_btn"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/shape_del_gray_smallcorner_bg"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/delete_address"/>

        <Button
            android:id="@+id/ss_server_address_add_btn"
            android:layout_toLeftOf="@id/ss_server_address_delete_btn"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_green_smallcorner_bg"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/add_address"/>
    </RelativeLayout>
</RelativeLayout>